--- a/apps/poc-app/docker-compose.yml
+++ b/apps/poc-app/docker-compose.yml
@@ -6,22 +6,9 @@ services:
     restart: unless-stopped
     labels:
         traefik.enable: true
-        traefik.http.routers.app.rule: "Host(`poc-app.cisco.com`) && PathPrefix(`/app`)"
+        traefik.http.routers.app.rule: "Host(`${TRAEFIK_DOMAIN}.${BASE_DOMAIN}`) && PathPrefix(`/app`)"
         traefik.http.routers.app.entrypoints: "https"
         traefik.http.routers.app.tls: true
         traefik.http.routers.app.service: "app"
         traefik.http.services.app.loadbalancer.server.port: 8080
 
-        # traefik.enable: true
-        # traefik.http.routers.caddy.rule: "Host(`poc-app.cisco.com`)"
-        # traefik.http.routers.caddy.entrypoints: "https"
-        # traefik.http.routers.caddy.tls: true
-        # traefik.http.routers.caddy.service: "caddy"
-        # traefik.http.services.caddy.loadbalancer.server.port: 80
-        # traefik.http.routers.caddy.rule: "Host(`poc-app.cisco.com`) && PathPrefix(`/web`)"
-        # traefik.http.routers.caddy.entrypoints: "https"
-        # traefik.http.routers.caddy.tls: true
-        # traefik.http.routers.caddy.service: "caddy"
-        # traefik.http.services.caddy.loadbalancer.server.port: 80
-        # traefik.http.routers.caddy.middlewares: caddy-strip
-        # traefik.http.middlewares.caddy-strip.stripprefix.prefixes: "/web"
